k8s/coingecko_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coingecko-api

spec:
  replicas: 5
  selector:
    matchLabels:
      app: coingecko-api
  template:
    metadata:
      labels:
        app: coingecko-api
    spec:
      containers:
        - name: coingecko-api-container
          image: ymcsabo/coingecko-api:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 5001
            protocol: TCP
