k8s/coingecko_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coingecko-api
  labels:
    name: coingecko-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      protocol: TCP
  selector:
    app: coingecko-api
